# thisnewsdoesnotexist

./: .gitignore  README.md  requirements.txt
design/: article.html  index.html
design/style/: site.css
fake-text-generator/: .gitignore  .gitmodules
fake-text-generator/src/: api.rs  main.rs
flask-app/: README.md  app.py  config.py  contact_us.py  display_funcs.py  getty_scraping.py  google_image_search.py  grover.py  requirements.txt  storage.py  text_cleanup.py
flask-app/static/style/: site.css
flask-app/templates/: about.html  article.html  category.html  contact-us-form.html  contact-us-response.html  footer.html  header.html  index.html
news-frontend/: package-lock.json  package.json
news-frontend/src/: App.js
tex-mex/: .dockerignore  Cargo.toml  Dockerfile  GroverConfig.json  example_request.json  run.sh
tex-mex/scripts/: cloud-init.sh  create-instance.sh  run.sh
tex-mex/src/: api.rs  grover.rs  lib.rs
