[package]
name = "tex-mex"
version = "0.1.0"
authors = ["Kenny Goodin <kennethbgoodin@gmail.com>"]

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
uuid = { version = "0.7.4", features = ["v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]